maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:88: error: ')' expected but 'var' found.
  var minimum=9999
  ^